syntax = "proto3";

package proto;

option go_package = "github.com/SXerox007/OrderServiceApp/protos/product";


import "google/api/annotations.proto";

message Order {
  string id = 1;
  string productId = 2;
  int32 quantity = 3;
  string status = 4;
  double orderValue = 5;
  string dispatchDate = 6;
}

message PlaceOrderRequest {
  string productId = 1;
  int32 quantity = 2;
}

message PlaceOrderResponse {
  Order order = 1;
}

service OrderService {
  rpc PlaceOrder(PlaceOrderRequest) returns (PlaceOrderResponse){
     option (google.api.http) = {
            post: "/v1/order/place"
            body: "*"
		};
  };
}
